added showMenu() feature

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <button onclick="startGame()">Start Game</button>
         </div>
         <div id="game">
-            
             <div id="number"></div>
+            <button onclick="showMenu()">Menu</button>
             <p>Your final score is:
                 <span id="show-score"></span>
             </p>
