--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark-mode">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,14 +28,21 @@
             <button onclick="startGame()">Start Game</button>
         </div>
         <div id="game">
+            <h2>Current Number:</h2>
             <div id="number"></div>
-            <button onclick="showMenu()">Menu</button>
-            <p>Your final score is:
-                <span id="show-score"></span>
-            </p>
+            <p>Your final score is: <span id="show-score"></span></p>
         </div>
     </div>
-
     <script src="script.js"></script>
+    <footer>
+        <div class="socials">
+            <a href="https://youtube.com/@aihxdev" target="_blank"><i class="fab fa-youtube"></i></a>
+            <a href="https://twitter.com/@aihxdev" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.linkedin.com/in/aihxdev" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://instagram.com/aihxdev" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://github.com/aihxdev" target="_blank"><i class="fab fa-github"></i></a>
+        </div>
+        <p>&copy; 2024 Flash Mental Arithmetic</p>
+    </footer>
 </body>
 </html>
