--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flash Mental Arithmetic</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="favicon.ico" type="image/x-icon"> <!-- Add this line for favicon -->
+    <link rel="icon" href="" type="image/x-icon">
 </head>
 <body>
     <div class="container">
