--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" class="dark-mode">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +8,12 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="" type="image/x-icon">
 </head>
+
 <body>
     <div class="container">
         <h1>Flash Mental Arithmetic</h1>
-        <p>Flash mental arithmetic is a memory game which displays digit numbers for some time and user have to add the numbers and provide the answer.</p>
+        <p>Flash mental arithmetic is a memory game which displays digit numbers for some time and user have to add the
+            numbers and provide the answer.</p>
         <div id="settings">
             <label for="digit">Select Digit Count:</label>
             <select id="digit">
@@ -46,4 +49,5 @@
         <p>&copy; 2024 Flash Mental Arithmetic</p>
     </footer>
 </body>
+
 </html>
