--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flash Mental Arithmetic</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
@@ -37,7 +37,7 @@
             <p>Your final score is: <span id="show-score"></span></p>
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="js/game.js"></script>
     <footer>
         <div class="socials">
             <a href="https://youtube.com/@aihxdev" target="_blank"><i class="fab fa-youtube"></i></a>
